// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CardWithHeaderAndButton /> renders correctly 1`] = `
<Component
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "justifyContent": "space-around",
      },
    ]
  }
>
  <Component
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "alignItems": "center",
        },
        Object {
          "justifyContent": "center",
        },
      ]
    }
  >
    <Component
      style={
        Array [
          Object {
            "fontFamily": "avenir-next-medium",
          },
          Object {
            "color": "#626262",
          },
          Object {
            "textAlign": "center",
          },
          Object {
            "fontSize": 20,
          },
          Object {
            "margin": 19.5,
          },
          Object {
            "marginBottom": 32.5,
          },
        ]
      }
    >
      card-title
    </Component>
    <Component
      style={
        Array [
          Object {
            "fontFamily": "avenir-next-regular",
          },
          Object {
            "color": "#9e9e9e",
          },
          Object {
            "fontSize": 16,
          },
          Object {
            "textAlign": "center",
          },
          Object {
            "marginLeft": 19.5,
          },
          Object {
            "marginRight": 26,
          },
        ]
      }
    />
  </Component>
  <Component
    style={
      Array [
        Object {
          "flex": 2,
        },
        Object {
          "alignItems": "center",
        },
      ]
    }
  >
    <Component
      style={
        Array [
          Object {
            "marginTop": 13,
          },
          Object {
            "paddingLeft": 19.5,
          },
          Object {
            "paddingRight": 19.5,
          },
          Object {
            "paddingBottom": 26,
          },
          Object {
            "paddingTop": 26,
          },
          Object {
            "backgroundColor": "#ffffff",
          },
          Object {
            "alignItems": "center",
          },
          Object {
            "justifyContent": "center",
          },
          Object {
            "borderRadius": 10,
          },
          Object {
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 4,
              "width": 2,
            },
            "shadowOpacity": 0.1,
            "shadowRadius": 2,
          },
        ]
      }
    >
      <Component
        style={Array []}
      >
        <Component>
          card-children
        </Component>
      </Component>
      <Button
        title="button-text"
        variant="primary-md"
      />
    </Component>
  </Component>
</Component>
`;

exports[`<CardWithHeaderAndButton /> renders disabled 1`] = `
<Component
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "justifyContent": "space-around",
      },
    ]
  }
>
  <Component
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "alignItems": "center",
        },
        Object {
          "justifyContent": "center",
        },
      ]
    }
  >
    <Component
      style={
        Array [
          Object {
            "fontFamily": "avenir-next-medium",
          },
          Object {
            "color": "#626262",
          },
          Object {
            "textAlign": "center",
          },
          Object {
            "fontSize": 20,
          },
          Object {
            "margin": 19.5,
          },
          Object {
            "marginBottom": 32.5,
          },
        ]
      }
    >
      card-title
    </Component>
    <Component
      style={
        Array [
          Object {
            "fontFamily": "avenir-next-regular",
          },
          Object {
            "color": "#9e9e9e",
          },
          Object {
            "fontSize": 16,
          },
          Object {
            "textAlign": "center",
          },
          Object {
            "marginLeft": 19.5,
          },
          Object {
            "marginRight": 26,
          },
        ]
      }
    />
  </Component>
  <Component
    style={
      Array [
        Object {
          "flex": 2,
        },
        Object {
          "alignItems": "center",
        },
      ]
    }
  >
    <Component
      style={
        Array [
          Object {
            "marginTop": 13,
          },
          Object {
            "paddingLeft": 19.5,
          },
          Object {
            "paddingRight": 19.5,
          },
          Object {
            "paddingBottom": 26,
          },
          Object {
            "paddingTop": 26,
          },
          Object {
            "backgroundColor": "#ffffff",
          },
          Object {
            "alignItems": "center",
          },
          Object {
            "justifyContent": "center",
          },
          Object {
            "borderRadius": 10,
          },
          Object {
            "shadowColor": "#000000",
            "shadowOffset": Object {
              "height": 4,
              "width": 2,
            },
            "shadowOpacity": 0.1,
            "shadowRadius": 2,
          },
        ]
      }
    >
      <Component
        style={Array []}
      >
        <Component>
          card-children
        </Component>
      </Component>
      <Button
        disabled={true}
        title="button-text"
        variant="primary-md"
      />
    </Component>
  </Component>
</Component>
`;
